log/build_2021-03-21_16-00-47/p1/stderr.log
  File "/home/pdabrow1/dev_ws/src/dabrowski_synowiec/install/p1/lib/python3.8/site-packages/p1/controller.py", line 40
    if key == self.up
                    ^
SyntaxError: invalid syntax

